--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Shipping -- England -- Liverpool -- History'
 - !lcsh 'Ships -- England -- Liverpool -- History'
 - !lcc 'DA'
+- GITenberg
 title: Reminiscences of a Liverpool Shipowner, 1850-1920
 url: http://www.gutenberg.org/ebooks/45157
